# truthtable-ncurses

./: Makefile  README.md  dune  gui.ml  lexer.mll  logik.ml
_build/: .db  .digest-db  log
_build/default/: .merlin  lexer.ml  lexer.mll  logik.ml  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  tok.ml
_build/default/.dune/: configurator
_build/default/.logik.eobjs/: dune__exe.ml-gen  dune__exe__Lexer.impl.all-deps  dune__exe__Logik.impl.all-deps  lexer.ml.d  logik.ml.d  parser.ml.d  parser.mli.d  parser__mock.ml.mock.d  tok.ml.d
_build/default/.logik.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Lexer.cmi  dune__exe__Lexer.cmo  dune__exe__Lexer.cmt  dune__exe__Logik.cmi  dune__exe__Logik.cmo  dune__exe__Logik.cmt  dune__exe__Parser.cmi  dune__exe__Parser.cmti  dune__exe__Tok.cmi  dune__exe__Tok.cmo  dune__exe__Tok.cmt
_build/default/.logik.eobjs/native/: dune__exe.cmx  dune__exe__Lexer.cmx  dune__exe__Logik.cmx  dune__exe__Parser.cmx  dune__exe__Tok.cmx
